--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
 
         </h1>
         <!--Enter your Mobile Number here! -->
-        <div class="subheading mb-5">(+92) 335-1927492 
+        <div class="subheading mb-5">(+92-199754342) 
           <br>
 
           <!--Enter your Email Address -->
-          <a href="mianjawadahmad@encoderbytes.com">sundarceo@google.com</a>
+          <a href="ahmadhassan@gmail.com">ahmadhassan@google.com</a>
         </div>
 
         <!-- Description / About Me! (Yahha khul ke Likhen) -->
         <p class="lead mb-5">
-          Pichai Sundararajan, known as Sundar Pichai, is an Indian-American business executive. He is the chief executive officer of Alphabet Inc. and its subsidiary Google. Born in Chennai, India, Pichai earned his degree from IIT Kharagpur in metallurgical engineering.
+          Ahmad hassan , known as Ahmad hassan , is an Full Stack Developer as well as Graphic Designer . He is the student of Fast univercity . and its subsidiary Google. Born in Abbatabad,Pakistan,  earned his degree from Fast univercity in Computer Science.
         </p>
 
 
         
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/Yahaa Apna link daalein/">
+          <a href="https://www.linkedin.com/in/Yahaa Apna link daalei/">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/Yaha Apna Link Daalein/">
