--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
       <div class="w-100">
         <!--Enter your name! -->
 
-        <h1 class="mb-0">Sundar Pichai
+        <h1 class="mb-0"Ahmad hassan> 
 
         </h1>
         <!--Enter your Mobile Number here! -->
-        <div class="subheading mb-5">(+92-199754342) 
+        <div class="subheading mb-5"(+92-199754342)> 
           <br>
 
           <!--Enter your Email Address -->
-          <a href="ahmadhassan@gmail.com">ahmadhassan@google.com</a>
+          <a href="ahmadhassan@gmail.com"ahmadhassan@google.com></a>
         </div>
 
         <!-- Description / About Me! (Yahha khul ke Likhen) -->
