--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!--Write your Name here! -->
       <span class="d-block d-lg-none">Ahmad hassan</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="WhatsApp Image 2025-06-12 at 13.53.35_57fcc10f.jpg" alt="">
       </span>
     </a>
 
