--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
           <a href="https://www.linkedin.com/in/Yahaa Apna link daalei/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/Yaha Apna Link Daalein/">
-            <i class="fab fa-github"></i>
-          </a>
+          
+     <a href="https://github.com/1Ahmadhassan1/Ahmad-hassan" target="_blank">
+  <i class="fab fa-github"></i>
+</a>
+
           <a href="https://twitter.com/Yaha Apna Link Daalein">
             <i class="fab fa-twitter"></i>
           </a>
